; ModuleID = '/home/carl/AnghaBench/mruby/src/extr_string.c_mrb_str_aset.c'
source_filename = "/home/carl/AnghaBench/mruby/src/extr_string.c_mrb_str_aset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@E_INDEX_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"string not matched\00", align 1
@.str.1 = private unnamed_addr constant [19 x i8] c"negative length %v\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32, i32, i32)* @mrb_str_aset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mrb_str_aset(i32* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %14 = load i32*, i32** %6, align 8
  %15 = load i32, i32* %10, align 4
  %16 = call i32 @mrb_to_str(i32* %14, i32 %15)
  %17 = load i32*, i32** %6, align 8
  %18 = load i32, i32* %7, align 4
  %19 = load i32, i32* %8, align 4
  %20 = load i32, i32* %9, align 4
  %21 = call i32 @str_convert_range(i32* %17, i32 %18, i32 %19, i32 %20, i64* %11, i64* %12)
  switch i32 %21, label %23 [
    i32 128, label %22
    i32 130, label %27
    i32 129, label %56
    i32 131, label %59
  ]

22:                                               ; preds = %5
  br label %23

23:                                               ; preds = %5, %22
  %24 = load i32*, i32** %6, align 8
  %25 = load i32, i32* @E_INDEX_ERROR, align 4
  %26 = call i32 @mrb_raise(i32* %24, i32 %25, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  br label %27

27:                                               ; preds = %5, %23
  %28 = load i64, i64* %12, align 8
  %29 = icmp slt i64 %28, 0
  br i1 %29, label %30, label %35

30:                                               ; preds = %27
  %31 = load i32*, i32** %6, align 8
  %32 = load i32, i32* @E_INDEX_ERROR, align 4
  %33 = load i32, i32* %9, align 4
  %34 = call i32 @mrb_raisef(i32* %31, i32 %32, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0), i32 %33)
  br label %35

35:                                               ; preds = %30, %27
  %36 = load i32, i32* %7, align 4
  %37 = call i64 @RSTRING_CHAR_LEN(i32 %36)
  store i64 %37, i64* %13, align 8
  %38 = load i64, i64* %11, align 8
  %39 = icmp slt i64 %38, 0
  br i1 %39, label %40, label %44

40:                                               ; preds = %35
  %41 = load i64, i64* %13, align 8
  %42 = load i64, i64* %11, align 8
  %43 = add nsw i64 %42, %41
  store i64 %43, i64* %11, align 8
  br label %44

44:                                               ; preds = %40, %35
  %45 = load i64, i64* %11, align 8
  %46 = icmp slt i64 %45, 0
  br i1 %46, label %51, label %47

47:                                               ; preds = %44
  %48 = load i64, i64* %11, align 8
  %49 = load i64, i64* %13, align 8
  %50 = icmp sgt i64 %48, %49
  br i1 %50, label %51, label %55

51:                                               ; preds = %47, %44
  %52 = load i32*, i32** %6, align 8
  %53 = load i32, i32* %8, align 4
  %54 = call i32 @str_out_of_index(i32* %52, i32 %53)
  br label %55

55:                                               ; preds = %51, %47
  br label %56

56:                                               ; preds = %5, %55
  %57 = load i32, i32* %7, align 4
  %58 = call i32 @str_range_to_bytes(i32 %57, i64* %11, i64* %12)
  br label %59

59:                                               ; preds = %5, %56
  %60 = load i32*, i32** %6, align 8
  %61 = load i32, i32* %7, align 4
  %62 = load i64, i64* %11, align 8
  %63 = load i64, i64* %11, align 8
  %64 = load i64, i64* %12, align 8
  %65 = add nsw i64 %63, %64
  %66 = load i32, i32* %10, align 4
  %67 = call i32 @str_replace_partial(i32* %60, i32 %61, i64 %62, i64 %65, i32 %66)
  br label %68

68:                                               ; preds = %59
  ret void
}

declare dso_local i32 @mrb_to_str(i32*, i32) #1

declare dso_local i32 @str_convert_range(i32*, i32, i32, i32, i64*, i64*) #1

declare dso_local i32 @mrb_raise(i32*, i32, i8*) #1

declare dso_local i32 @mrb_raisef(i32*, i32, i8*, i32) #1

declare dso_local i64 @RSTRING_CHAR_LEN(i32) #1

declare dso_local i32 @str_out_of_index(i32*, i32) #1

declare dso_local i32 @str_range_to_bytes(i32, i64*, i64*) #1

declare dso_local i32 @str_replace_partial(i32*, i32, i64, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
